@@ -1,5 +1,8 @@
 2004-01-22  Jesper Harder  <harder@ifa.au.dk>
 
+	* spam-stat.el (spam-stat-strip-xref): New function.
+	(spam-stat-process-directory): Use it.
+
 	* gnus-util.el (gnus-fetch-field): Don't bind case-fold-search
 	here -- it's done in message-fetch-field.
 
